<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/about"
    android:fillViewport="true"
    tools:context="com.example.android.navigation.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/aboutImage"
            android:layout_width="396dp"
            android:layout_height="266dp"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/horizontal_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/lemon" />

        <TextView
            android:id="@+id/textName"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginEnd="220dp"
            android:autoText="false"
            android:background="#034e03"
            android:gravity="center"
            android:text="@string/textName"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.538" />

        <TextView
            android:id="@+id/contentName"
            android:layout_width="171dp"
            android:layout_height="61dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/contentName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.647" />

        <TextView
            android:id="@+id/textNickName"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:background="#034e03"
            android:gravity="center"
            android:text="@string/textNickName"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.538" />

        <TextView
            android:id="@+id/contentNickName"
            android:layout_width="171dp"
            android:layout_height="61dp"
            android:layout_marginStart="224dp"
            android:gravity="center"
            android:text="@string/contentNickName"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.645" />

        <TextView
            android:id="@+id/textAboutme"
            android:layout_width="390dp"
            android:layout_height="40dp"
            android:background="#034e03"
            android:gravity="center"
            android:text="@string/textAboutMe"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNickName"
            app:layout_constraintVertical_bias="0.368" />

        <TextView
            android:id="@+id/contentAboutMe"
            android:layout_width="380dp"
            android:layout_height="121dp"
            android:layout_marginStart="16dp"
            android:text="@string/contentAboutMe"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.993" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>